GNU tar NEWS - User visible changes. 2025-07-25
Please send GNU tar bug reports to <bug-tar@gnu.org>

version TBD

* New manual section "Reproducibility", for reproducible tarballs.

* New options: --set-mtime-command and --set-mtime-format

Both options are valid when archiving files.

** --set-mtime-command=COMMAND

For each FILE being archived, run "COMMAND FILE", parse its
output as time string and set mtime value of the archive member
from the result.

Unless --set-mtime-format is also used, the output is parsed
as argument to --mtime option (see GNU tar manual, chapter 4
"Date input formats".

** --set-mtime-format=FMT

Defines output format for the COMMAND set by the above option.  If
used, command output will be parsed using strptime(3).

* Skip file or archive member if transformed name is empty

If applying file name transformations (--transform and
--strip-component options) to a file or member name results in an
empty string that file or member is skipped and a warning is printed.

The warning can be suppressed using the --warning=empty-transform
option.

* Bug fixes

** Fixed O(n^2) time complexity bug for large numbers of directories when
   extracting with --delay-directory-restore or reading incremental archives.

** tar no longer uses alloca, fixing an unlikely stack overflow.

** When diagnosing invalid extended headers tar now quotes control characters.

** Transformations that change case (e.g., --transform='s/.*/\L&/')
   now work correctly with multi-byte characters.

** tar now works better in strict debugging environments that do not
   allow pointer arithmetic to escape from a sub-element of an array.

* Performance improvements

** Sparse files are now read and written with larger blocksizes.


version 1.35 - Sergey Poznyakoff, 2023-07-18

* Fail when building GNU tar, if the platform supports 64-bit time_t
  but the build uses only 32-bit time_t.

* Leave the devmajor and devminor fields empty (rather than zero) for